# rustuff

./: curses.rs  generics.rs  history.txt  linear.rs  math.rs  prac.rs  prac2.rs
a-chat/: Cargo.toml
aksh/: exec.rs
areas/: Cargo.toml
arrays/: Cargo.toml
async/: Cargo.toml
async_tests/: Cargo.toml
azultests/: Cargo.toml
big_calc/: Cargo.toml
bst/: Cargo.toml
btreemaps/: Cargo.toml
buf/: Cargo.toml
cargo-readme/: Cargo.toml
cicada_tests/: Cargo.toml  errfile
closures/: Cargo.toml
covdirs/: Cargo.toml
curses/: Cargo.toml
deref_prac/: Cargo.toml
dl/: Cargo.toml
double/: Cargo.toml
enums/: Cargo.toml
error/: Cargo.toml
fc/: Cargo.toml
fibo/: Cargo.toml
fmtprac/: Cargo.toml
four_bit_adder/: Cargo.toml
functs/: Cargo.toml
generics/: Cargo.toml
gnum/: Cargo.toml
graphs/: Cargo.toml
greeting_lambda/: Cargo.toml
gtk-rs/: Cargo.toml
hashmaps/: Cargo.toml
hello_rocket/: Cargo.toml
hellow/: Cargo.toml
iters/: Cargo.toml
kiss-ui/: Cargo.toml
lien/: Cargo.toml
lifetimes/: Cargo.toml
lineditor/: Cargo.toml
linked_list/: Cargo.toml
lotus/: Cargo.toml
macros/: Cargo.toml
midpoints/: Cargo.toml
minigrep/: Cargo.toml
modules/: Cargo.toml
multi_linear/: Cargo.toml
obscurial/: Cargo.toml
outermost/: Cargo.toml
pascal_triangle/: Cargo.toml
rectangles/: Cargo.toml
regex_prac/: Cargo.toml
rf_prac/: Cargo.toml
rosetta/: Cargo.toml
sbeve/: Cargo.toml
sciter-ui/: Cargo.toml  hello.html  splash.html
scraper-rs/: Cargo.toml
shret/: op.txt  (+1 more)
web-stuff/: Cargo.toml
web-stuff/src/: main.rs
(+118 files in other folders)
