[package]
name = "web-stuff"
version = "0.1.0"
authors = ["Akshay <nerdypepper@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde_json = "1.0"

[dependencies.serde]
version = "1.0.103"
features = ["derive"]
